--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,16 @@
 version: 2
 updates:
-  - package-ecosystem: "npm" # Cambia "npm" según tu ecosistema de dependencias (pip, maven, etc.)
-    directory: "/" # Directorio raíz del proyecto
+  - package-ecosystem: "docker"
+    directory: "/"
     schedule:
-      interval: "weekly" # Puede ser "daily", "weekly", o "monthly"
+      interval: "weekly"
+
+  - package-ecosystem: "github-actions"
+    directory: "/.github/workflows/"
+    schedule:
+      interval: "daily"
+
+  - package-ecosystem: "maven"
+    directory: "/"
+    schedule:
+      interval: "daily"
